2004-04-29  David Schleef  <ds@schleef.org>

	* gst/elements/gstfilesink.c: (gst_filesink_handle_event):
	Patch from Sebastien Cote to fix leakage of events. (bug #141414)

2004-04-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/elements/gstfakesrc.c: (gst_fakesrc_class_init):
          fix property
	* gst/gstcaps.c:
          fix doc string
	* po/POTFILES.in:
          rename typefind source file

2004-04-28  David Schleef  <ds@schleef.org>

	Several new files from Steve Lhomme's MSVC patch (bug #141317):
	* win32/GStreamer.vcproj:
	* win32/Makefile:
	* win32/config.h:
	* win32/dirent.c: (_topendir), (_treaddir), (_tclosedir),
	(_trewinddir), (_ttelldir), (_tseekdir):
	* win32/dirent.h:
	* win32/gst-inspect.vcproj:
	* win32/gst-launch.vcproj:
	* win32/gst-register.vcproj:
	* win32/gstbytestream.vcproj:
	* win32/gstelements.vcproj:
	* win32/gstoptimalscheduler.vcproj:
	* win32/gstspider.vcproj:
	* win32/gtchar.h:
	* win32/mman.c: (mmap), (mprotect), (msync), (munmap):
	* win32/mman.h:
	* win32/mman.inl:
	* win32/msvc71.sln:

2004-04-29  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* gst/gst.c: (init_post):
	* gst/gstinfo.c:
	  remove useless _gst_progname stuff
	* tools/gst-inspect.c: (print_field), (print_caps):
	  improve caps output

2004-04-28  David Schleef  <ds@schleef.org>

	Disable parsing of a lot of files that aren't part of the
	exported API.  Move corresponding template files to old/,
	waiting for removal when they don't contain anything
	interesting.
	* docs/gst/Makefile.am:
	* docs/gst/gstreamer-sections.txt:
	* docs/gst/tmpl/cothreads.sgml:
	* docs/gst/tmpl/cothreads_compat.sgml:
	* docs/gst/tmpl/gettext.sgml:
	* docs/gst/tmpl/gobject2gtk.sgml:
	* docs/gst/tmpl/grammar.tab.sgml:
	* docs/gst/tmpl/gst-i18n-app.sgml:
	* docs/gst/tmpl/gst-i18n-lib.sgml:
	* docs/gst/tmpl/gst_private.sgml:
	* docs/gst/tmpl/gstaggregator.sgml:
	* docs/gst/tmpl/gstarch.sgml:
	* docs/gst/tmpl/gstatomic_impl.sgml:
	* docs/gst/tmpl/gstbufferstore.sgml: